# github-issue-graphrag

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
eval/: queries.json  results.csv  results.md
examples/: sample_queries.md
scripts/: build_index.py  build_vector_index.py  evaluate_retrieval.py  fetch_github_issues.py  inspect_graph.py  inspect_relations.py  query.py  regenerate_reports.py
src/issue_graphrag/: __init__.py  chunker.py  config.py  evaluation.py  models.py  prompts.py
src/issue_graphrag/embeddings/: __init__.py  base.py  sentence_transformer.py
src/issue_graphrag/indexing/: community.py  extractor.py  graph_builder.py  graph_normalizer.py  normalizer.py  report_generator.py  vector_documents.py
src/issue_graphrag/ingest/: github_loader.py
src/issue_graphrag/llm/: client.py  json_utils.py
src/issue_graphrag/retrieval/: global_search.py  hybrid_search.py  local_search.py  naive_search.py  router.py  vector_search.py
src/issue_graphrag/storage/: json_store.py  qdrant_store.py  vector_store.py
tests/: test_chunker.py  test_embeddings.py  test_evaluation.py  test_json_utils.py  test_normalizer.py  test_qdrant_store.py  test_retrievers.py  test_vector_documents.py
